--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
         {% endblock %}
     </head>
     <body>
+    <h1>Welcome to Woofer</h1>
         {% block body %}{% endblock %}
     </body>
 </html>
