--- a/templates/micro_post/show.html.twig
+++ b/templates/micro_post/show.html.twig
@@ -5,14 +5,20 @@
 
 {% block body %}
 <!-- THIS IS THE VIEW -->
-<h3>{{post.title}}</h3>
-<div>{{post.text}}</div>
-<div>
+{% if post.id > 0 %}
+    <h2>Post Title</h2>
+        <h3>{{post.title}}</h3>
+    <h2>Post Content</h2>
+        <div>{{post.text}}</div>
+    <div>
     <!-- param is accessing the `created` key of the messages array index --> 
     {% if date(post.created) < date('-1year') %}
         Message older than 1 year
     {% else %}
         Message received {{ post.created|date('d/m/Y')}}
+    {% endif %}  
+{% else %} 
+        Invalid postID
     {% endif %}  
 </div>
 
