--- a/templates/micro_post/add.html.twig
+++ b/templates/micro_post/add.html.twig
@@ -7,28 +7,8 @@
 <!-- forms work in symfony by giving them beginnings and endings
 so in this case, form_start and form_end denote the start and
 the finish of the form. -->
-    {{ form_start(form) }}
-        <div>{{form_errors(form)}}</div>
+    
+{% include ('micro_post/_form.html.twig') %}
 
-        <!-- renders the label (i.e. the table col)-->
-        <div>
-            {{ form_label(form.title, 'Please enter the title of your post') }}
-        </div>
-        <!-- renders the widget (i.e. the input field)-->
-        <div>
-            {{ form_widget(form.title, {'attr': {'style' : 'color : blue'}}) }}
-        </div>
-
-        <div>
-            {{ form_label(form.text, 'Please enter the main text of your post') }}
-        </div>
-        <div>
-            {{ form_widget(form.text, {'attr': {'style' : 'color : green'}}) }}
-        </div>
-
-    <div>
-        <button type="submit">Save post</button>
-    </div>
-    {{ form_end(form) }}
 {% endblock %}
  
