added styling to save post btn

--- a/templates/micro_post/_form.html.twig
+++ b/templates/micro_post/_form.html.twig
@@ -25,6 +25,6 @@
         </div>
 
     <div>
-        <button type="submit">Save post</button>
+        <button class="rounded-md p-1 dark:border-green-300" type="submit">Save post</button>
     </div>
     {{ form_end(form) }}
