--- a/templates/micro_post/edit.html.twig
+++ b/templates/micro_post/edit.html.twig
@@ -3,6 +3,10 @@
 
 {% block title %}Edit your Post{% endblock %}
 
+{% block breadcrumb %}
+> Edit post 
+{% endblock %}
+
 {% block body %}
 
 {% include ('micro_post/_form.html.twig') %}
