--- a/templates/micro_post/show.html.twig
+++ b/templates/micro_post/show.html.twig
@@ -3,6 +3,10 @@
 
 {% block title %}{{post.title}}{% endblock %}
 
+{% block breadcrumb %}
+> View post 
+{% endblock %}
+
 {% block body %}
 <!-- THIS IS THE VIEW -->
 {# {% if post.id > 0 %}
