added theme form for handling errors

--- a/templates/micro_post/add.html.twig
+++ b/templates/micro_post/add.html.twig
@@ -3,6 +3,10 @@
 
 {% block title %}Create New Post{% endblock %}
 
+{% block breadcrumb %}
+> Add post 
+{% endblock %}
+
 {% block body %}
 <!-- forms work in symfony by giving them beginnings and endings
 so in this case, form_start and form_end denote the start and
